fix(ui): wrap too long tracker url (#757)

--- a/client/src/sass/components/_torrent-details-panel.scss
+++ b/client/src/sass/components/_torrent-details-panel.scss
@@ -347,4 +347,11 @@ $torrent-details--tags--foreground: #1a2028;
       white-space: nowrap;
     }
   }
+
+  &__trackers {
+    &--url {
+      overflow-wrap: anywhere;
+      text-wrap: balance;
+    }
+  }
 }
